--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.6",
     "handsontable": "^0.25.0",
     "jquery": "^2.2.4",
-    "leaflet": "^0.7.7"
+    "leaflet": "^0.7.7",
+    "leaflet-draw": "^0.3.0"
   }
 }
